Feat: Implementation of getting progress for user in assignment TODO: tests + implement other endpoints
