# backend/src/application/schemas/progressSchemas.ts
@@ -1,0 +1,6 @@
+import { z } from "zod";
+
+export const getUserProgressSchema = z.object({
+    idParent: z.string(),
+    id: z.string(),
+});
