# backend/src/config/controllers.ts
@@ -56,6 +56,9 @@ export const controllers = {
         services.submission.create,
         services.submission.getUserSubmissions,
     ),
+    progress: new Resources.ProgressController(
+        services.progress.get,
+    ),
     learningObject: new Resources.LearningObjectController(services.learningObject.get, services.learningObject.getAll),
     learningPath: new Resources.LearningPathController(services.learningPath.get, services.learningPath.getAll),
     user: new Resources.UserController(
